# Duct-Tape-and-Dreams

./: .gitignore  CMakeLists.txt  LinuxDependencyInstaller.sh  README.md  TODO.md  TODO_0.1.1.md
Duct-Tape-and-Dreams/: Duct-Tape-and-Dreams.sln
Duct-Tape-and-Dreams/Duct-Tape-and-Dreams/: Controller.h  Duct-Tape-and-Dreams.vcxproj  Duct-Tape-and-Dreams.vcxproj.filters  Entity.h  Event.h  Game.h  Map.h  Object.h  OnScreenText.cpp  OnScreenText.h  Physics.h  main.cpp  mainheader.h  settings.cpp  settings.h  settingsDefault.txt  settingsUser.txt  test.lua
docs/: README.md
docs/pages/: .gitignore
docs/static/: BuildingReleases.txt  DevelopmentTracker.txt  Versioning.txt  steamupload.txt
lib/Lua51/: lua51.lib
lib/luajit2.0/: luajit.lib
src/: main.cpp
